--- a/Web Chat/index.html
+++ b/Web Chat/index.html
@@ -26,7 +26,8 @@
       /* Fullscreen Chat */
       .chat-wrapper {
         position: fixed;
-        margin: 50;
+        max-width: 1200px;
+        margin: 30px auto;
         inset: 0;
         z-index: 1;
       }
